[package]
name = "stampede_map"
version = "0.1.0"
authors = ["Alyssa Verkade <alyssaverkade@gmail.com>"]
edition = "2018"

[dependencies]
wyhash = "0.5"
ahash = "0.7"
lazy_static = "*"

[dev-dependencies]
proptest = "1"
criterion = "0.3"
rand = "0.8"
jemallocator = "0.3"

[[bench]]
name = "stampede_benches"
harness = false

[profile.bench]
debug = 2
lto = "fat"
